	On the other hand, conversion to LaTeX with the default
	outputEncoding = "ASCII" uses the second part.

    o	A new class "listOfMethods" has been introduced to represent
        the methods in a methods table, to replace the deprecated
        class "MethodsList".

    o	any() and all() return early if possible.  This may speed up
	operations on long vectors.


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.

    o	Use of multiple arguments to return() is now defunct.

    o	The use of UseMethod() with more than two arguments is now defunct.

    o	In the 'methods' package, the old MethodsList metadata objects
	have been superseded since R 2.8.0 by hash tables
	(environments) and are being phased out for efficiency.  In
	the present stage only stubs are generated and a warning
	issued if these are accessed: shortly none will be generated.

    o	Continuing the last item, getMethods() is now deprecated, with
        its internal use replaced by findMethods() and other changes.


INSTALLATION

    o	UTF-8 is now used for the reference manual and package
	manuals.  This requires LaTeX '2005/12/01' or later.


PACKAGE INSTALLATION

    o	Characters in R source which are not translatable to the
	current locale are now handled more tolerantly:  these will be
	converted to hex codes with a warning.  Such characters are
	only really portable if they appear in comments.

    o	R CMD INSTALL now tests that the installed package can be loaded
	(and backs out the installation if it cannot): this can be
	suppressed by --no-test-load.  This avoids installing/updating